--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -16,11 +16,12 @@ body {
     margin-bottom: 100px;
 }
 
-header, main {
+main {
     padding: 0px 80px;
 }
 
 header {
+    padding: 80px;
     margin-bottom: 50px;
 }
 
@@ -31,6 +32,11 @@ h2 {
 
 h3 {
     margin-bottom: 20px;
+}
+
+h5 {
+    margin: 0px 0px 20px 0px;
+    font-size: 20px;
 }
 
 button {
@@ -77,7 +83,7 @@ canvas.queryGraph {
 .select {
     width: 100%;
     min-width: 250px;
-    max-width: 500px;
+    /*max-width: 500px;*/
     color: black;
     text-align: center;
 }
@@ -86,23 +92,16 @@ canvas.queryGraph {
     cursor: pointer;
 }
 
-.rc-slider.slider {
-    width: 300px;
-    margin-left: 0px;
-    margin-top: 20px;
-    margin-bottom: 90px;
+.rc-slider {
+    position: relative;
+    top: 12px;
+    margin-bottom: 44px;
 }
 
 .rc-slider span {
     color: white;
     margin-top: 18px;
     font-size: 18px;
-}
-
-h5 {
-    font-size: 20px;
-    margin-top: 40px;
-    margin-bottom: 30px;
 }
 
 table {
@@ -135,6 +134,7 @@ button.emphasized {
     display: flex;
     flex-wrap: wrap;
     align-items: top;
+    columns: 100px;
 }
 
 .flexibleColumn > * {
@@ -150,4 +150,17 @@ button.emphasized {
 
 .flexibleColumn.quarter > * {
     flex-basis: 25%;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 50px;
+}
+
+.shortcut {
+    margin-left: 10px;
+    padding: 3px 10px;
+    background:rgba(255,255,255,0.15);
+    border-radius: 6px;
 }
