--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,3 +1,4 @@
+
 .App-header {
     min-height: 20vh;/*100vh;*/
     display: flex;
@@ -106,8 +107,9 @@ canvas.queryGraph {
 
 table {
     font-size: 18px;
-    table-layout: fixed;
+    /*table-layout: fixed;*/
     width: 100%;
+    border-spacing: 0;
 }
 
 thead {
